--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "solo-project",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production nodemon server/server.js",
+    "start": "HTTPS=true cross-env NODE_ENV=production nodemon server/server.js",
     "build": "cross-env NODE_ENV=production webpack",
     "dev": "concurrently \"node server/server.js\" \"NODE_ENV=development webpack serve --open\""
   },
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/YuriiShchyrba/solo-project#readme",
   "dependencies": {
+    "@react-google-maps/api": "^2.7.0",
     "@types/react": "^17.0.39",
     "axios": "^0.26.0",
     "express": "^4.17.2",
@@ -26,20 +27,28 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "^5.3.0",
     "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
     "redux-form": "^8.3.8",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "regenerator-runtime": "^0.13.9"
   },
   "devDependencies": {
     "@babel/core": "^7.17.3",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "babel-core": "^6.26.3",
     "babel-loader": "^8.2.3",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^4.0.0",
     "concurrently": "^7.0.0",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "css-loader": "^6.6.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.5.3",
     "node-sass": "^7.0.1",
